--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.5.1",
+    "axios": "^0.19.0",
     "material-ui-flat-pagination": "^4.0.0",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "redux": "^4.0.4",
+    "redux-immutable-state-invariant": "^2.1.0",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
